# template-cli

./: .prettierrc  Cargo.toml  README.md
.github/workflows/: lint.yml
src/: config.rs  lib.rs  main.rs  opts.rs  setup.rs  utils.rs
templates/next/: [l]layout.tsx  [p]page.tsx
templates/svelte/: [e]+error.svelte  [l]+layout.svelte  [ls]+layout.server.ts  [p]+page.svelte  [ps]+page.server.ts
