[package]
name = "templates"
version = "0.9.0"
edition = "2021"
authors = ["Mateusz Piórowski <mateuszpiorowski@gmail.com>"]
license = "MIT"
description = "A CLI for managing templates"
readme = "README.md"
homepage = "https://github.com/mpiorowski/templates-cli"
repository = "https://github.com/mpiorowski/templates-cli"
keywords = ["cli", "utilities", "templates"]
categories = ["command-line-utilities"]

[[bin]]
name = "tp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.91"
